--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -2998,6 +2998,6 @@ Error text: {1}</value>
     <value>Empty pages filled in the gaps</value>
   </data>
   <data name="Project_DoNotDisplayMessageBoxForShowingSection" xml:space="preserve">
-    <value>Do not Show Message box for showing section containing the phrase</value>
+    <value>Do not show message box while moving to phrase in another section</value>
   </data>
 </root>
