In section list of Multi section operation dialog if section is empty then it will be indicated by no audio after section level.

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -3000,4 +3000,7 @@ Error text: {1}</value>
   <data name="Project_DoNotDisplayMessageBoxForShowingSection" xml:space="preserve">
     <value>Do not show message box while moving to phrase in another section</value>
   </data>
+  <data name="NoAudioInSection" xml:space="preserve">
+    <value>no audio</value>
+  </data>
 </root>
